# Tree-model-with-QTreeView

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  tree_form_file.txt  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
